// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderAlert is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <div
    class="euiHeaderAlert__title"
  >
    title
  </div>
  <div
    class="euiHeaderAlert__text"
  />
</div>
`;

exports[`EuiHeaderAlert renders action 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <div
    class="euiHeaderAlert__title"
  >
    title
  </div>
  <div
    class="euiHeaderAlert__text"
  />
  <div
    class="euiHeaderAlert__action euiLink"
  >
    <button>
      Quietly take to the ship
    </button>
  </div>
</div>
`;

exports[`EuiHeaderAlert renders date as an element 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        <h2>
          October 18, 1851
        </h2>
      </div>
    </div>
  </div>
  <div
    class="euiHeaderAlert__title"
  >
    shazm
  </div>
  <div
    class="euiHeaderAlert__text"
  />
</div>
`;

exports[`EuiHeaderAlert renders title as an element 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <div
    class="euiHeaderAlert__title"
  >
    <h2>
      Circumambulate the city
    </h2>
  </div>
  <div
    class="euiHeaderAlert__text"
  />
</div>
`;
